use mashlib-as-an-app branch of mashlib:

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="TabulatorOutline" id="DummyUUID">
         <table id="outline"></table>
     </div>
-  <script type="text/javascript" src="/mashlib.min.js"></script>
+  <script type="text/javascript" src="/mashlib.js"></script>
   <script>
     var uri = decodeURIComponent(window.location.hash.substring('#resource='.length));
     window.document.title = uri;
